--- a/OpenFlight/config.xcconfig
+++ b/OpenFlight/config.xcconfig
@@ -1,4 +1,5 @@
 #include "Pods/Target Support Files/Pods-OpenFlightApp/Pods-OpenFlightApp.release.xcconfig"
+#include "Pods/Target Support Files/Pods-OpenFlightApp/Pods-OpenFlightApp.debug.xcconfig"
 PRODUCT_BUNDLE_IDENTIFIER = com.parrot.drone.openpenflight
 IPHONEOS_DEPLOYMENT_TARGET = 13.0
 SWIFT_VERSION = 5.0
